- Fixed the floating point output of binary operator tests.

--- a/tests/regression_tests/expressions/correct/binary_operators_0001.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0001.in
@@ -5,8 +5,8 @@
 0004:[{debug_dump( 5 - -$foo )}]
 0005:[{debug_dump( 5 * 5 )}]
 0006:[{debug_dump( 5 * -$foo )}]
-0007:[{debug_dump( 5 / 5 )}]
-0008:[{debug_dump( 5 / -$foo )}]
+0007:[{str_number( 5 / 5 , 2, ',', '' )}]
+0008:[{str_number( 5 / -$foo , 2, ',', '' )}]
 0009:[{debug_dump( 5 % 5 )}]
 0010:[{debug_dump( 5 % -$foo )}]
 0011:[{debug_dump( 5 == 5 )}]
