--- a/tests/regression_tests/expressions/correct/binary_operators_0002.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0002.in
@@ -5,8 +5,8 @@
 0036:[{debug_dump( -$foo - -$foo )}]
 0037:[{debug_dump( -$foo * 5 )}]
 0038:[{debug_dump( -$foo * -$foo )}]
-0039:[{debug_dump( -$foo / 5 )}]
-0040:[{debug_dump( -$foo / -$foo )}]
+0039:[{str_number( -$foo / 5 , 2, ',', '' )}]
+0040:[{str_number( -$foo / -$foo , 2, ',', '' )}]
 0041:[{debug_dump( -$foo % 5 )}]
 0042:[{debug_dump( -$foo % -$foo )}]
 0043:[{debug_dump( -$foo == 5 )}]
