--- a/tests/regression_tests/expressions/correct/binary_operators_0003.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0003.in
@@ -5,8 +5,8 @@
 0068:[{debug_dump( ( $foo + 5 ) - -$foo )}]
 0069:[{debug_dump( ( $foo + 5 ) * 5 )}]
 0070:[{debug_dump( ( $foo + 5 ) * -$foo )}]
-0071:[{debug_dump( ( $foo + 5 ) / 5 )}]
-0072:[{debug_dump( ( $foo + 5 ) / -$foo )}]
+0071:[{str_number( ( $foo + 5 ) / 5 , 2, ',', '' )}]
+0072:[{str_number( ( $foo + 5 ) / -$foo , 2, ',', '' )}]
 0073:[{debug_dump( ( $foo + 5 ) % 5 )}]
 0074:[{debug_dump( ( $foo + 5 ) % -$foo )}]
 0075:[{debug_dump( ( $foo + 5 ) == 5 )}]
