--- a/tests/regression_tests/expressions/correct/binary_operators_0004.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0004.in
@@ -5,8 +5,8 @@
 0100:[{debug_dump( ( $foo - 5 ) - -$foo )}]
 0101:[{debug_dump( ( $foo - 5 ) * 5 )}]
 0102:[{debug_dump( ( $foo - 5 ) * -$foo )}]
-0103:[{debug_dump( ( $foo - 5 ) / 5 )}]
-0104:[{debug_dump( ( $foo - 5 ) / -$foo )}]
+0103:[{str_number( ( $foo - 5 ) / 5 , 2, ',', '' )}]
+0104:[{str_number( ( $foo - 5 ) / -$foo , 2, ',', '' )}]
 0105:[{debug_dump( ( $foo - 5 ) % 5 )}]
 0106:[{debug_dump( ( $foo - 5 ) % -$foo )}]
 0107:[{debug_dump( ( $foo - 5 ) == 5 )}]
