--- a/tests/regression_tests/expressions/correct/binary_operators_0005.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0005.in
@@ -5,8 +5,8 @@
 0132:[{debug_dump( ( $foo * 5 ) - -$foo )}]
 0133:[{debug_dump( ( $foo * 5 ) * 5 )}]
 0134:[{debug_dump( ( $foo * 5 ) * -$foo )}]
-0135:[{debug_dump( ( $foo * 5 ) / 5 )}]
-0136:[{debug_dump( ( $foo * 5 ) / -$foo )}]
+0135:[{str_number( ( $foo * 5 ) / 5 , 2, ',', '' )}]
+0136:[{str_number( ( $foo * 5 ) / -$foo , 2, ',', '' )}]
 0137:[{debug_dump( ( $foo * 5 ) % 5 )}]
 0138:[{debug_dump( ( $foo * 5 ) % -$foo )}]
 0139:[{debug_dump( ( $foo * 5 ) == 5 )}]
