--- a/tests/regression_tests/expressions/correct/binary_operators_0006.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0006.in
@@ -1,33 +1,33 @@
 {var $foo = 42, $bar = 101, $bar2 = 201, $arr = array( 'foo' => 401 )}
-0161:[{debug_dump( ( $foo / 5 ) + 5 )}]
-0162:[{debug_dump( ( $foo / 5 ) + -$foo )}]
-0163:[{debug_dump( ( $foo / 5 ) - 5 )}]
-0164:[{debug_dump( ( $foo / 5 ) - -$foo )}]
-0165:[{debug_dump( ( $foo / 5 ) * 5 )}]
-0166:[{debug_dump( ( $foo / 5 ) * -$foo )}]
-0167:[{debug_dump( ( $foo / 5 ) / 5 )}]
-0168:[{debug_dump( ( $foo / 5 ) / -$foo )}]
-0169:[{debug_dump( ( $foo / 5 ) % 5 )}]
-0170:[{debug_dump( ( $foo / 5 ) % -$foo )}]
-0171:[{debug_dump( ( $foo / 5 ) == 5 )}]
-0172:[{debug_dump( ( $foo / 5 ) == -$foo )}]
-0173:[{debug_dump( ( $foo / 5 ) === 5 )}]
-0174:[{debug_dump( ( $foo / 5 ) === -$foo )}]
-0175:[{debug_dump( ( $foo / 5 ) != 5 )}]
-0176:[{debug_dump( ( $foo / 5 ) != -$foo )}]
-0177:[{debug_dump( ( $foo / 5 ) !== 5 )}]
-0178:[{debug_dump( ( $foo / 5 ) !== -$foo )}]
-0179:[{debug_dump( ( $foo / 5 ) < 5 )}]
-0180:[{debug_dump( ( $foo / 5 ) < -$foo )}]
-0181:[{debug_dump( ( $foo / 5 ) <= 5 )}]
-0182:[{debug_dump( ( $foo / 5 ) <= -$foo )}]
-0183:[{debug_dump( ( $foo / 5 ) > 5 )}]
-0184:[{debug_dump( ( $foo / 5 ) > -$foo )}]
-0185:[{debug_dump( ( $foo / 5 ) >= 5 )}]
-0186:[{debug_dump( ( $foo / 5 ) >= -$foo )}]
-0187:[{debug_dump( ( $foo / 5 ) && 5 )}]
-0188:[{debug_dump( ( $foo / 5 ) && -$foo )}]
-0189:[{debug_dump( ( $foo / 5 ) || 5 )}]
-0190:[{debug_dump( ( $foo / 5 ) || -$foo )}]
-0191:[{debug_dump( ( $foo / 5 ) . 5 )}]
-0192:[{debug_dump( ( $foo / 5 ) . -$foo )}]
+0161:[{str_number( ( $foo / 5 ) + 5 , 2, ',', '' )}]
+0162:[{str_number( ( $foo / 5 ) + -$foo , 2, ',', '' )}]
+0163:[{str_number( ( $foo / 5 ) - 5 , 2, ',', '' )}]
+0164:[{str_number( ( $foo / 5 ) - -$foo , 2, ',', '' )}]
+0165:[{str_number( ( $foo / 5 ) * 5 , 2, ',', '' )}]
+0166:[{str_number( ( $foo / 5 ) * -$foo , 2, ',', '' )}]
+0167:[{str_number( ( $foo / 5 ) / 5 , 2, ',', '' )}]
+0168:[{str_number( ( $foo / 5 ) / -$foo , 2, ',', '' )}]
+0169:[{str_number( ( $foo / 5 ) % 5 , 2, ',', '' )}]
+0170:[{str_number( ( $foo / 5 ) % -$foo , 2, ',', '' )}]
+0171:[{str_number( ( $foo / 5 ) == 5 , 2, ',', '' )}]
+0172:[{str_number( ( $foo / 5 ) == -$foo , 2, ',', '' )}]
+0173:[{str_number( ( $foo / 5 ) === 5 , 2, ',', '' )}]
+0174:[{str_number( ( $foo / 5 ) === -$foo , 2, ',', '' )}]
+0175:[{str_number( ( $foo / 5 ) != 5 , 2, ',', '' )}]
+0176:[{str_number( ( $foo / 5 ) != -$foo , 2, ',', '' )}]
+0177:[{str_number( ( $foo / 5 ) !== 5 , 2, ',', '' )}]
+0178:[{str_number( ( $foo / 5 ) !== -$foo , 2, ',', '' )}]
+0179:[{str_number( ( $foo / 5 ) < 5 , 2, ',', '' )}]
+0180:[{str_number( ( $foo / 5 ) < -$foo , 2, ',', '' )}]
+0181:[{str_number( ( $foo / 5 ) <= 5 , 2, ',', '' )}]
+0182:[{str_number( ( $foo / 5 ) <= -$foo , 2, ',', '' )}]
+0183:[{str_number( ( $foo / 5 ) > 5 , 2, ',', '' )}]
+0184:[{str_number( ( $foo / 5 ) > -$foo , 2, ',', '' )}]
+0185:[{str_number( ( $foo / 5 ) >= 5 , 2, ',', '' )}]
+0186:[{str_number( ( $foo / 5 ) >= -$foo , 2, ',', '' )}]
+0187:[{str_number( ( $foo / 5 ) && 5 , 2, ',', '' )}]
+0188:[{str_number( ( $foo / 5 ) && -$foo , 2, ',', '' )}]
+0189:[{str_number( ( $foo / 5 ) || 5 , 2, ',', '' )}]
+0190:[{str_number( ( $foo / 5 ) || -$foo , 2, ',', '' )}]
+0191:[{str_number( ( $foo / 5 ) . 5 , 2, ',', '' )}]
+0192:[{str_number( ( $foo / 5 ) . -$foo , 2, ',', '' )}]
