--- a/tests/regression_tests/expressions/correct/binary_operators_0007.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0007.in
@@ -5,8 +5,8 @@
 0196:[{debug_dump( ( $foo % 5 ) - -$foo )}]
 0197:[{debug_dump( ( $foo % 5 ) * 5 )}]
 0198:[{debug_dump( ( $foo % 5 ) * -$foo )}]
-0199:[{debug_dump( ( $foo % 5 ) / 5 )}]
-0200:[{debug_dump( ( $foo % 5 ) / -$foo )}]
+0199:[{str_number( ( $foo % 5 ) / 5 , 2, ',', '' )}]
+0200:[{str_number( ( $foo % 5 ) / -$foo , 2, ',', '' )}]
 0201:[{debug_dump( ( $foo % 5 ) % 5 )}]
 0202:[{debug_dump( ( $foo % 5 ) % -$foo )}]
 0203:[{debug_dump( ( $foo % 5 ) == 5 )}]
