--- a/tests/regression_tests/expressions/correct/binary_operators_0008.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0008.in
@@ -5,8 +5,8 @@
 0228:[{debug_dump( ( $foo == 5 ) - -$foo )}]
 0229:[{debug_dump( ( $foo == 5 ) * 5 )}]
 0230:[{debug_dump( ( $foo == 5 ) * -$foo )}]
-0231:[{debug_dump( ( $foo == 5 ) / 5 )}]
-0232:[{debug_dump( ( $foo == 5 ) / -$foo )}]
+0231:[{str_number( ( $foo == 5 ) / 5 , 2, ',', '' )}]
+0232:[{str_number( ( $foo == 5 ) / -$foo , 2, ',', '' )}]
 0233:[{debug_dump( ( $foo == 5 ) % 5 )}]
 0234:[{debug_dump( ( $foo == 5 ) % -$foo )}]
 0235:[{debug_dump( ( $foo == 5 ) == 5 )}]
