--- a/tests/regression_tests/expressions/correct/binary_operators_0009.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0009.in
@@ -5,8 +5,8 @@
 0260:[{debug_dump( ( $foo === 5 ) - -$foo )}]
 0261:[{debug_dump( ( $foo === 5 ) * 5 )}]
 0262:[{debug_dump( ( $foo === 5 ) * -$foo )}]
-0263:[{debug_dump( ( $foo === 5 ) / 5 )}]
-0264:[{debug_dump( ( $foo === 5 ) / -$foo )}]
+0263:[{str_number( ( $foo === 5 ) / 5 , 2, ',', '' )}]
+0264:[{str_number( ( $foo === 5 ) / -$foo , 2, ',', '' )}]
 0265:[{debug_dump( ( $foo === 5 ) % 5 )}]
 0266:[{debug_dump( ( $foo === 5 ) % -$foo )}]
 0267:[{debug_dump( ( $foo === 5 ) == 5 )}]
