--- a/tests/regression_tests/expressions/correct/binary_operators_0010.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0010.in
@@ -5,8 +5,8 @@
 0292:[{debug_dump( ( $foo != 5 ) - -$foo )}]
 0293:[{debug_dump( ( $foo != 5 ) * 5 )}]
 0294:[{debug_dump( ( $foo != 5 ) * -$foo )}]
-0295:[{debug_dump( ( $foo != 5 ) / 5 )}]
-0296:[{debug_dump( ( $foo != 5 ) / -$foo )}]
+0295:[{str_number( ( $foo != 5 ) / 5 , 2, ',', '' )}]
+0296:[{str_number( ( $foo != 5 ) / -$foo , 2, ',', '' )}]
 0297:[{debug_dump( ( $foo != 5 ) % 5 )}]
 0298:[{debug_dump( ( $foo != 5 ) % -$foo )}]
 0299:[{debug_dump( ( $foo != 5 ) == 5 )}]
