--- a/tests/regression_tests/expressions/correct/binary_operators_0011.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0011.in
@@ -5,8 +5,8 @@
 0324:[{debug_dump( ( $foo !== 5 ) - -$foo )}]
 0325:[{debug_dump( ( $foo !== 5 ) * 5 )}]
 0326:[{debug_dump( ( $foo !== 5 ) * -$foo )}]
-0327:[{debug_dump( ( $foo !== 5 ) / 5 )}]
-0328:[{debug_dump( ( $foo !== 5 ) / -$foo )}]
+0327:[{str_number( ( $foo !== 5 ) / 5 , 2, ',', '' )}]
+0328:[{str_number( ( $foo !== 5 ) / -$foo , 2, ',', '' )}]
 0329:[{debug_dump( ( $foo !== 5 ) % 5 )}]
 0330:[{debug_dump( ( $foo !== 5 ) % -$foo )}]
 0331:[{debug_dump( ( $foo !== 5 ) == 5 )}]
