--- a/tests/regression_tests/expressions/correct/binary_operators_0012.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0012.in
@@ -5,8 +5,8 @@
 0356:[{debug_dump( ( $foo < 5 ) - -$foo )}]
 0357:[{debug_dump( ( $foo < 5 ) * 5 )}]
 0358:[{debug_dump( ( $foo < 5 ) * -$foo )}]
-0359:[{debug_dump( ( $foo < 5 ) / 5 )}]
-0360:[{debug_dump( ( $foo < 5 ) / -$foo )}]
+0359:[{str_number( ( $foo < 5 ) / 5 , 2, ',', '' )}]
+0360:[{str_number( ( $foo < 5 ) / -$foo , 2, ',', '' )}]
 0361:[{debug_dump( ( $foo < 5 ) % 5 )}]
 0362:[{debug_dump( ( $foo < 5 ) % -$foo )}]
 0363:[{debug_dump( ( $foo < 5 ) == 5 )}]
