--- a/tests/regression_tests/expressions/correct/binary_operators_0013.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0013.in
@@ -5,8 +5,8 @@
 0388:[{debug_dump( ( $foo <= 5 ) - -$foo )}]
 0389:[{debug_dump( ( $foo <= 5 ) * 5 )}]
 0390:[{debug_dump( ( $foo <= 5 ) * -$foo )}]
-0391:[{debug_dump( ( $foo <= 5 ) / 5 )}]
-0392:[{debug_dump( ( $foo <= 5 ) / -$foo )}]
+0391:[{str_number( ( $foo <= 5 ) / 5 , 2, ',', '' )}]
+0392:[{str_number( ( $foo <= 5 ) / -$foo , 2, ',', '' )}]
 0393:[{debug_dump( ( $foo <= 5 ) % 5 )}]
 0394:[{debug_dump( ( $foo <= 5 ) % -$foo )}]
 0395:[{debug_dump( ( $foo <= 5 ) == 5 )}]
