--- a/tests/regression_tests/expressions/correct/binary_operators_0014.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0014.in
@@ -5,8 +5,8 @@
 0420:[{debug_dump( ( $foo > 5 ) - -$foo )}]
 0421:[{debug_dump( ( $foo > 5 ) * 5 )}]
 0422:[{debug_dump( ( $foo > 5 ) * -$foo )}]
-0423:[{debug_dump( ( $foo > 5 ) / 5 )}]
-0424:[{debug_dump( ( $foo > 5 ) / -$foo )}]
+0423:[{str_number( ( $foo > 5 ) / 5 , 2, ',', '' )}]
+0424:[{str_number( ( $foo > 5 ) / -$foo , 2, ',', '' )}]
 0425:[{debug_dump( ( $foo > 5 ) % 5 )}]
 0426:[{debug_dump( ( $foo > 5 ) % -$foo )}]
 0427:[{debug_dump( ( $foo > 5 ) == 5 )}]
