--- a/tests/regression_tests/expressions/correct/binary_operators_0015.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0015.in
@@ -5,8 +5,8 @@
 0452:[{debug_dump( ( $foo >= 5 ) - -$foo )}]
 0453:[{debug_dump( ( $foo >= 5 ) * 5 )}]
 0454:[{debug_dump( ( $foo >= 5 ) * -$foo )}]
-0455:[{debug_dump( ( $foo >= 5 ) / 5 )}]
-0456:[{debug_dump( ( $foo >= 5 ) / -$foo )}]
+0455:[{str_number( ( $foo >= 5 ) / 5 , 2, ',', '' )}]
+0456:[{str_number( ( $foo >= 5 ) / -$foo , 2, ',', '' )}]
 0457:[{debug_dump( ( $foo >= 5 ) % 5 )}]
 0458:[{debug_dump( ( $foo >= 5 ) % -$foo )}]
 0459:[{debug_dump( ( $foo >= 5 ) == 5 )}]
