--- a/tests/regression_tests/expressions/correct/binary_operators_0016.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0016.in
@@ -5,8 +5,8 @@
 0484:[{debug_dump( ( $foo && 5 ) - -$foo )}]
 0485:[{debug_dump( ( $foo && 5 ) * 5 )}]
 0486:[{debug_dump( ( $foo && 5 ) * -$foo )}]
-0487:[{debug_dump( ( $foo && 5 ) / 5 )}]
-0488:[{debug_dump( ( $foo && 5 ) / -$foo )}]
+0487:[{str_number( ( $foo && 5 ) / 5 , 2, ',', '' )}]
+0488:[{str_number( ( $foo && 5 ) / -$foo , 2, ',', '' )}]
 0489:[{debug_dump( ( $foo && 5 ) % 5 )}]
 0490:[{debug_dump( ( $foo && 5 ) % -$foo )}]
 0491:[{debug_dump( ( $foo && 5 ) == 5 )}]
