--- a/tests/regression_tests/expressions/correct/binary_operators_0017.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0017.in
@@ -5,8 +5,8 @@
 0516:[{debug_dump( ( $foo || 5 ) - -$foo )}]
 0517:[{debug_dump( ( $foo || 5 ) * 5 )}]
 0518:[{debug_dump( ( $foo || 5 ) * -$foo )}]
-0519:[{debug_dump( ( $foo || 5 ) / 5 )}]
-0520:[{debug_dump( ( $foo || 5 ) / -$foo )}]
+0519:[{str_number( ( $foo || 5 ) / 5 , 2, ',', '' )}]
+0520:[{str_number( ( $foo || 5 ) / -$foo , 2, ',', '' )}]
 0521:[{debug_dump( ( $foo || 5 ) % 5 )}]
 0522:[{debug_dump( ( $foo || 5 ) % -$foo )}]
 0523:[{debug_dump( ( $foo || 5 ) == 5 )}]
