--- a/tests/regression_tests/expressions/correct/binary_operators_0018.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0018.in
@@ -5,8 +5,8 @@
 0548:[{debug_dump( ( $foo . 5 ) - -$foo )}]
 0549:[{debug_dump( ( $foo . 5 ) * 5 )}]
 0550:[{debug_dump( ( $foo . 5 ) * -$foo )}]
-0551:[{debug_dump( ( $foo . 5 ) / 5 )}]
-0552:[{debug_dump( ( $foo . 5 ) / -$foo )}]
+0551:[{str_number( ( $foo . 5 ) / 5 , 2, ',', '' )}]
+0552:[{str_number( ( $foo . 5 ) / -$foo , 2, ',', '' )}]
 0553:[{debug_dump( ( $foo . 5 ) % 5 )}]
 0554:[{debug_dump( ( $foo . 5 ) % -$foo )}]
 0555:[{debug_dump( ( $foo . 5 ) == 5 )}]
