--- a/tests/regression_tests/expressions/correct/binary_operators_0019.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0019.in
@@ -6,8 +6,8 @@
 0580:[{debug_dump( ( $obj -> foo ) - -$foo )}]
 0581:[{debug_dump( ( $obj -> foo ) * 5 )}]
 0582:[{debug_dump( ( $obj -> foo ) * -$foo )}]
-0583:[{debug_dump( ( $obj -> foo ) / 5 )}]
-0584:[{debug_dump( ( $obj -> foo ) / -$foo )}]
+0583:[{str_number( ( $obj -> foo ) / 5 , 2, ',', '' )}]
+0584:[{str_number( ( $obj -> foo ) / -$foo , 2, ',', '' )}]
 0585:[{debug_dump( ( $obj -> foo ) % 5 )}]
 0586:[{debug_dump( ( $obj -> foo ) % -$foo )}]
 0587:[{debug_dump( ( $obj -> foo ) == 5 )}]
