--- a/tests/regression_tests/expressions/correct/binary_operators_0020.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0020.in
@@ -5,8 +5,8 @@
 0612:[{debug_dump( ( $arr['foo'] ) - -$foo )}]
 0613:[{debug_dump( ( $arr['foo'] ) * 5 )}]
 0614:[{debug_dump( ( $arr['foo'] ) * -$foo )}]
-0615:[{debug_dump( ( $arr['foo'] ) / 5 )}]
-0616:[{debug_dump( ( $arr['foo'] ) / -$foo )}]
+0615:[{str_number( ( $arr['foo'] ) / 5 , 2, ',', '' )}]
+0616:[{str_number( ( $arr['foo'] ) / -$foo , 2, ',', '' )}]
 0617:[{debug_dump( ( $arr['foo'] ) % 5 )}]
 0618:[{debug_dump( ( $arr['foo'] ) % -$foo )}]
 0619:[{debug_dump( ( $arr['foo'] ) == 5 )}]
