--- a/tests/regression_tests/expressions/correct/binary_operators_0021.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0021.in
@@ -5,8 +5,8 @@
 0644:[{debug_dump( !( $foo + 5 ) - -$foo )}]
 0645:[{debug_dump( !( $foo + 5 ) * 5 )}]
 0646:[{debug_dump( !( $foo + 5 ) * -$foo )}]
-0647:[{debug_dump( !( $foo + 5 ) / 5 )}]
-0648:[{debug_dump( !( $foo + 5 ) / -$foo )}]
+0647:[{str_number( !( $foo + 5 ) / 5 , 2, ',', '' )}]
+0648:[{str_number( !( $foo + 5 ) / -$foo , 2, ',', '' )}]
 0649:[{debug_dump( !( $foo + 5 ) % 5 )}]
 0650:[{debug_dump( !( $foo + 5 ) % -$foo )}]
 0651:[{debug_dump( !( $foo + 5 ) == 5 )}]
