--- a/tests/regression_tests/expressions/correct/binary_operators_0022.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0022.in
@@ -5,8 +5,8 @@
 0676:[{debug_dump( !( $foo - 5 ) - -$foo )}]
 0677:[{debug_dump( !( $foo - 5 ) * 5 )}]
 0678:[{debug_dump( !( $foo - 5 ) * -$foo )}]
-0679:[{debug_dump( !( $foo - 5 ) / 5 )}]
-0680:[{debug_dump( !( $foo - 5 ) / -$foo )}]
+0679:[{str_number( !( $foo - 5 ) / 5 , 2, ',', '' )}]
+0680:[{str_number( !( $foo - 5 ) / -$foo , 2, ',', '' )}]
 0681:[{debug_dump( !( $foo - 5 ) % 5 )}]
 0682:[{debug_dump( !( $foo - 5 ) % -$foo )}]
 0683:[{debug_dump( !( $foo - 5 ) == 5 )}]
