--- a/tests/regression_tests/expressions/correct/binary_operators_0023.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0023.in
@@ -5,8 +5,8 @@
 0708:[{debug_dump( !( $foo * 5 ) - -$foo )}]
 0709:[{debug_dump( !( $foo * 5 ) * 5 )}]
 0710:[{debug_dump( !( $foo * 5 ) * -$foo )}]
-0711:[{debug_dump( !( $foo * 5 ) / 5 )}]
-0712:[{debug_dump( !( $foo * 5 ) / -$foo )}]
+0711:[{str_number( !( $foo * 5 ) / 5 , 2, ',', '' )}]
+0712:[{str_number( !( $foo * 5 ) / -$foo , 2, ',', '' )}]
 0713:[{debug_dump( !( $foo * 5 ) % 5 )}]
 0714:[{debug_dump( !( $foo * 5 ) % -$foo )}]
 0715:[{debug_dump( !( $foo * 5 ) == 5 )}]
