--- a/tests/regression_tests/expressions/correct/binary_operators_0024.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0024.in
@@ -1,33 +1,33 @@
 {var $foo = 42, $bar = 101, $bar2 = 201, $arr = array( 'foo' => 401 )}
-0737:[{debug_dump( !( $foo / 5 ) + 5 )}]
-0738:[{debug_dump( !( $foo / 5 ) + -$foo )}]
-0739:[{debug_dump( !( $foo / 5 ) - 5 )}]
-0740:[{debug_dump( !( $foo / 5 ) - -$foo )}]
-0741:[{debug_dump( !( $foo / 5 ) * 5 )}]
-0742:[{debug_dump( !( $foo / 5 ) * -$foo )}]
-0743:[{debug_dump( !( $foo / 5 ) / 5 )}]
-0744:[{debug_dump( !( $foo / 5 ) / -$foo )}]
-0745:[{debug_dump( !( $foo / 5 ) % 5 )}]
-0746:[{debug_dump( !( $foo / 5 ) % -$foo )}]
-0747:[{debug_dump( !( $foo / 5 ) == 5 )}]
-0748:[{debug_dump( !( $foo / 5 ) == -$foo )}]
-0749:[{debug_dump( !( $foo / 5 ) === 5 )}]
-0750:[{debug_dump( !( $foo / 5 ) === -$foo )}]
-0751:[{debug_dump( !( $foo / 5 ) != 5 )}]
-0752:[{debug_dump( !( $foo / 5 ) != -$foo )}]
-0753:[{debug_dump( !( $foo / 5 ) !== 5 )}]
-0754:[{debug_dump( !( $foo / 5 ) !== -$foo )}]
-0755:[{debug_dump( !( $foo / 5 ) < 5 )}]
-0756:[{debug_dump( !( $foo / 5 ) < -$foo )}]
-0757:[{debug_dump( !( $foo / 5 ) <= 5 )}]
-0758:[{debug_dump( !( $foo / 5 ) <= -$foo )}]
-0759:[{debug_dump( !( $foo / 5 ) > 5 )}]
-0760:[{debug_dump( !( $foo / 5 ) > -$foo )}]
-0761:[{debug_dump( !( $foo / 5 ) >= 5 )}]
-0762:[{debug_dump( !( $foo / 5 ) >= -$foo )}]
-0763:[{debug_dump( !( $foo / 5 ) && 5 )}]
-0764:[{debug_dump( !( $foo / 5 ) && -$foo )}]
-0765:[{debug_dump( !( $foo / 5 ) || 5 )}]
-0766:[{debug_dump( !( $foo / 5 ) || -$foo )}]
-0767:[{debug_dump( !( $foo / 5 ) . 5 )}]
-0768:[{debug_dump( !( $foo / 5 ) . -$foo )}]
+0737:[{str_number( !( $foo / 5 ) + 5 , 2, ',', '' )}]
+0738:[{str_number( !( $foo / 5 ) + -$foo , 2, ',', '' )}]
+0739:[{str_number( !( $foo / 5 ) - 5 , 2, ',', '' )}]
+0740:[{str_number( !( $foo / 5 ) - -$foo , 2, ',', '' )}]
+0741:[{str_number( !( $foo / 5 ) * 5 , 2, ',', '' )}]
+0742:[{str_number( !( $foo / 5 ) * -$foo , 2, ',', '' )}]
+0743:[{str_number( !( $foo / 5 ) / 5 , 2, ',', '' )}]
+0744:[{str_number( !( $foo / 5 ) / -$foo , 2, ',', '' )}]
+0745:[{str_number( !( $foo / 5 ) % 5 , 2, ',', '' )}]
+0746:[{str_number( !( $foo / 5 ) % -$foo , 2, ',', '' )}]
+0747:[{str_number( !( $foo / 5 ) == 5 , 2, ',', '' )}]
+0748:[{str_number( !( $foo / 5 ) == -$foo , 2, ',', '' )}]
+0749:[{str_number( !( $foo / 5 ) === 5 , 2, ',', '' )}]
+0750:[{str_number( !( $foo / 5 ) === -$foo , 2, ',', '' )}]
+0751:[{str_number( !( $foo / 5 ) != 5 , 2, ',', '' )}]
+0752:[{str_number( !( $foo / 5 ) != -$foo , 2, ',', '' )}]
+0753:[{str_number( !( $foo / 5 ) !== 5 , 2, ',', '' )}]
+0754:[{str_number( !( $foo / 5 ) !== -$foo , 2, ',', '' )}]
+0755:[{str_number( !( $foo / 5 ) < 5 , 2, ',', '' )}]
+0756:[{str_number( !( $foo / 5 ) < -$foo , 2, ',', '' )}]
+0757:[{str_number( !( $foo / 5 ) <= 5 , 2, ',', '' )}]
+0758:[{str_number( !( $foo / 5 ) <= -$foo , 2, ',', '' )}]
+0759:[{str_number( !( $foo / 5 ) > 5 , 2, ',', '' )}]
+0760:[{str_number( !( $foo / 5 ) > -$foo , 2, ',', '' )}]
+0761:[{str_number( !( $foo / 5 ) >= 5 , 2, ',', '' )}]
+0762:[{str_number( !( $foo / 5 ) >= -$foo , 2, ',', '' )}]
+0763:[{str_number( !( $foo / 5 ) && 5 , 2, ',', '' )}]
+0764:[{str_number( !( $foo / 5 ) && -$foo , 2, ',', '' )}]
+0765:[{str_number( !( $foo / 5 ) || 5 , 2, ',', '' )}]
+0766:[{str_number( !( $foo / 5 ) || -$foo , 2, ',', '' )}]
+0767:[{str_number( !( $foo / 5 ) . 5 , 2, ',', '' )}]
+0768:[{str_number( !( $foo / 5 ) . -$foo , 2, ',', '' )}]
