--- a/tests/regression_tests/expressions/correct/binary_operators_0025.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0025.in
@@ -5,8 +5,8 @@
 0772:[{debug_dump( !( $foo % 5 ) - -$foo )}]
 0773:[{debug_dump( !( $foo % 5 ) * 5 )}]
 0774:[{debug_dump( !( $foo % 5 ) * -$foo )}]
-0775:[{debug_dump( !( $foo % 5 ) / 5 )}]
-0776:[{debug_dump( !( $foo % 5 ) / -$foo )}]
+0775:[{str_number( !( $foo % 5 ) / 5 , 2, ',', '' )}]
+0776:[{str_number( !( $foo % 5 ) / -$foo , 2, ',', '' )}]
 0777:[{debug_dump( !( $foo % 5 ) % 5 )}]
 0778:[{debug_dump( !( $foo % 5 ) % -$foo )}]
 0779:[{debug_dump( !( $foo % 5 ) == 5 )}]
