--- a/tests/regression_tests/expressions/correct/binary_operators_0026.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0026.in
@@ -5,8 +5,8 @@
 0804:[{debug_dump( !( $foo == 5 ) - -$foo )}]
 0805:[{debug_dump( !( $foo == 5 ) * 5 )}]
 0806:[{debug_dump( !( $foo == 5 ) * -$foo )}]
-0807:[{debug_dump( !( $foo == 5 ) / 5 )}]
-0808:[{debug_dump( !( $foo == 5 ) / -$foo )}]
+0807:[{str_number( !( $foo == 5 ) / 5 , 2, ',', '' )}]
+0808:[{str_number( !( $foo == 5 ) / -$foo , 2, ',', '' )}]
 0809:[{debug_dump( !( $foo == 5 ) % 5 )}]
 0810:[{debug_dump( !( $foo == 5 ) % -$foo )}]
 0811:[{debug_dump( !( $foo == 5 ) == 5 )}]
