--- a/tests/regression_tests/expressions/correct/binary_operators_0027.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0027.in
@@ -5,8 +5,8 @@
 0836:[{debug_dump( !( $foo === 5 ) - -$foo )}]
 0837:[{debug_dump( !( $foo === 5 ) * 5 )}]
 0838:[{debug_dump( !( $foo === 5 ) * -$foo )}]
-0839:[{debug_dump( !( $foo === 5 ) / 5 )}]
-0840:[{debug_dump( !( $foo === 5 ) / -$foo )}]
+0839:[{str_number( !( $foo === 5 ) / 5 , 2, ',', '' )}]
+0840:[{str_number( !( $foo === 5 ) / -$foo , 2, ',', '' )}]
 0841:[{debug_dump( !( $foo === 5 ) % 5 )}]
 0842:[{debug_dump( !( $foo === 5 ) % -$foo )}]
 0843:[{debug_dump( !( $foo === 5 ) == 5 )}]
