--- a/tests/regression_tests/expressions/correct/binary_operators_0028.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0028.in
@@ -5,8 +5,8 @@
 0868:[{debug_dump( !( $foo != 5 ) - -$foo )}]
 0869:[{debug_dump( !( $foo != 5 ) * 5 )}]
 0870:[{debug_dump( !( $foo != 5 ) * -$foo )}]
-0871:[{debug_dump( !( $foo != 5 ) / 5 )}]
-0872:[{debug_dump( !( $foo != 5 ) / -$foo )}]
+0871:[{str_number( !( $foo != 5 ) / 5 , 2, ',', '' )}]
+0872:[{str_number( !( $foo != 5 ) / -$foo , 2, ',', '' )}]
 0873:[{debug_dump( !( $foo != 5 ) % 5 )}]
 0874:[{debug_dump( !( $foo != 5 ) % -$foo )}]
 0875:[{debug_dump( !( $foo != 5 ) == 5 )}]
