--- a/tests/regression_tests/expressions/correct/binary_operators_0029.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0029.in
@@ -5,8 +5,8 @@
 0900:[{debug_dump( !( $foo !== 5 ) - -$foo )}]
 0901:[{debug_dump( !( $foo !== 5 ) * 5 )}]
 0902:[{debug_dump( !( $foo !== 5 ) * -$foo )}]
-0903:[{debug_dump( !( $foo !== 5 ) / 5 )}]
-0904:[{debug_dump( !( $foo !== 5 ) / -$foo )}]
+0903:[{str_number( !( $foo !== 5 ) / 5 , 2, ',', '' )}]
+0904:[{str_number( !( $foo !== 5 ) / -$foo , 2, ',', '' )}]
 0905:[{debug_dump( !( $foo !== 5 ) % 5 )}]
 0906:[{debug_dump( !( $foo !== 5 ) % -$foo )}]
 0907:[{debug_dump( !( $foo !== 5 ) == 5 )}]
