--- a/tests/regression_tests/expressions/correct/binary_operators_0030.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0030.in
@@ -5,8 +5,8 @@
 0932:[{debug_dump( !( $foo < 5 ) - -$foo )}]
 0933:[{debug_dump( !( $foo < 5 ) * 5 )}]
 0934:[{debug_dump( !( $foo < 5 ) * -$foo )}]
-0935:[{debug_dump( !( $foo < 5 ) / 5 )}]
-0936:[{debug_dump( !( $foo < 5 ) / -$foo )}]
+0935:[{str_number( !( $foo < 5 ) / 5 , 2, ',', '' )}]
+0936:[{str_number( !( $foo < 5 ) / -$foo , 2, ',', '' )}]
 0937:[{debug_dump( !( $foo < 5 ) % 5 )}]
 0938:[{debug_dump( !( $foo < 5 ) % -$foo )}]
 0939:[{debug_dump( !( $foo < 5 ) == 5 )}]
