--- a/tests/regression_tests/expressions/correct/binary_operators_0031.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0031.in
@@ -5,8 +5,8 @@
 0964:[{debug_dump( !( $foo <= 5 ) - -$foo )}]
 0965:[{debug_dump( !( $foo <= 5 ) * 5 )}]
 0966:[{debug_dump( !( $foo <= 5 ) * -$foo )}]
-0967:[{debug_dump( !( $foo <= 5 ) / 5 )}]
-0968:[{debug_dump( !( $foo <= 5 ) / -$foo )}]
+0967:[{str_number( !( $foo <= 5 ) / 5 , 2, ',', '' )}]
+0968:[{str_number( !( $foo <= 5 ) / -$foo , 2, ',', '' )}]
 0969:[{debug_dump( !( $foo <= 5 ) % 5 )}]
 0970:[{debug_dump( !( $foo <= 5 ) % -$foo )}]
 0971:[{debug_dump( !( $foo <= 5 ) == 5 )}]
