--- a/tests/regression_tests/expressions/correct/binary_operators_0032.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0032.in
@@ -5,8 +5,8 @@
 0996:[{debug_dump( !( $foo > 5 ) - -$foo )}]
 0997:[{debug_dump( !( $foo > 5 ) * 5 )}]
 0998:[{debug_dump( !( $foo > 5 ) * -$foo )}]
-0999:[{debug_dump( !( $foo > 5 ) / 5 )}]
-1000:[{debug_dump( !( $foo > 5 ) / -$foo )}]
+0999:[{str_number( !( $foo > 5 ) / 5 , 2, ',', '' )}]
+1000:[{str_number( !( $foo > 5 ) / -$foo , 2, ',', '' )}]
 1001:[{debug_dump( !( $foo > 5 ) % 5 )}]
 1002:[{debug_dump( !( $foo > 5 ) % -$foo )}]
 1003:[{debug_dump( !( $foo > 5 ) == 5 )}]
