--- a/tests/regression_tests/expressions/correct/binary_operators_0034.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0034.in
@@ -5,8 +5,8 @@
 1060:[{debug_dump( !( $foo && 5 ) - -$foo )}]
 1061:[{debug_dump( !( $foo && 5 ) * 5 )}]
 1062:[{debug_dump( !( $foo && 5 ) * -$foo )}]
-1063:[{debug_dump( !( $foo && 5 ) / 5 )}]
-1064:[{debug_dump( !( $foo && 5 ) / -$foo )}]
+1063:[{str_number( !( $foo && 5 ) / 5 , 2, ',', '' )}]
+1064:[{str_number( !( $foo && 5 ) / -$foo , 2, ',', '' )}]
 1065:[{debug_dump( !( $foo && 5 ) % 5 )}]
 1066:[{debug_dump( !( $foo && 5 ) % -$foo )}]
 1067:[{debug_dump( !( $foo && 5 ) == 5 )}]
