--- a/tests/regression_tests/expressions/correct/binary_operators_0035.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0035.in
@@ -5,8 +5,8 @@
 1092:[{debug_dump( !( $foo || 5 ) - -$foo )}]
 1093:[{debug_dump( !( $foo || 5 ) * 5 )}]
 1094:[{debug_dump( !( $foo || 5 ) * -$foo )}]
-1095:[{debug_dump( !( $foo || 5 ) / 5 )}]
-1096:[{debug_dump( !( $foo || 5 ) / -$foo )}]
+1095:[{str_number( !( $foo || 5 ) / 5 , 2, ',', '' )}]
+1096:[{str_number( !( $foo || 5 ) / -$foo , 2, ',', '' )}]
 1097:[{debug_dump( !( $foo || 5 ) % 5 )}]
 1098:[{debug_dump( !( $foo || 5 ) % -$foo )}]
 1099:[{debug_dump( !( $foo || 5 ) == 5 )}]
