--- a/tests/regression_tests/expressions/correct/binary_operators_0036.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0036.in
@@ -5,8 +5,8 @@
 1124:[{debug_dump( !( $foo . 5 ) - -$foo )}]
 1125:[{debug_dump( !( $foo . 5 ) * 5 )}]
 1126:[{debug_dump( !( $foo . 5 ) * -$foo )}]
-1127:[{debug_dump( !( $foo . 5 ) / 5 )}]
-1128:[{debug_dump( !( $foo . 5 ) / -$foo )}]
+1127:[{str_number( !( $foo . 5 ) / 5 , 2, ',', '' )}]
+1128:[{str_number( !( $foo . 5 ) / -$foo , 2, ',', '' )}]
 1129:[{debug_dump( !( $foo . 5 ) % 5 )}]
 1130:[{debug_dump( !( $foo . 5 ) % -$foo )}]
 1131:[{debug_dump( !( $foo . 5 ) == 5 )}]
