--- a/tests/regression_tests/expressions/correct/binary_operators_0037.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0037.in
@@ -6,8 +6,8 @@
 1156:[{debug_dump( !( $obj -> foo ) - -$foo )}]
 1157:[{debug_dump( !( $obj -> foo ) * 5 )}]
 1158:[{debug_dump( !( $obj -> foo ) * -$foo )}]
-1159:[{debug_dump( !( $obj -> foo ) / 5 )}]
-1160:[{debug_dump( !( $obj -> foo ) / -$foo )}]
+1159:[{str_number( !( $obj -> foo ) / 5 , 2, ',', '' )}]
+1160:[{str_number( !( $obj -> foo ) / -$foo , 2, ',', '' )}]
 1161:[{debug_dump( !( $obj -> foo ) % 5 )}]
 1162:[{debug_dump( !( $obj -> foo ) % -$foo )}]
 1163:[{debug_dump( !( $obj -> foo ) == 5 )}]
