--- a/tests/regression_tests/expressions/correct/binary_operators_0038.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0038.in
@@ -5,8 +5,8 @@
 1188:[{debug_dump( !( $arr['foo'] ) - -$foo )}]
 1189:[{debug_dump( !( $arr['foo'] ) * 5 )}]
 1190:[{debug_dump( !( $arr['foo'] ) * -$foo )}]
-1191:[{debug_dump( !( $arr['foo'] ) / 5 )}]
-1192:[{debug_dump( !( $arr['foo'] ) / -$foo )}]
+1191:[{str_number( !( $arr['foo'] ) / 5 , 2, ',', '' )}]
+1192:[{str_number( !( $arr['foo'] ) / -$foo , 2, ',', '' )}]
 1193:[{debug_dump( !( $arr['foo'] ) % 5 )}]
 1194:[{debug_dump( !( $arr['foo'] ) % -$foo )}]
 1195:[{debug_dump( !( $arr['foo'] ) == 5 )}]
