--- a/tests/regression_tests/expressions/correct/binary_operators_0033.in
+++ b/tests/regression_tests/expressions/correct/binary_operators_0033.in
@@ -5,8 +5,8 @@
 1028:[{debug_dump( !( $foo >= 5 ) - -$foo )}]
 1029:[{debug_dump( !( $foo >= 5 ) * 5 )}]
 1030:[{debug_dump( !( $foo >= 5 ) * -$foo )}]
-1031:[{debug_dump( !( $foo >= 5 ) / 5 )}]
-1032:[{debug_dump( !( $foo >= 5 ) / -$foo )}]
+1031:[{str_number( !( $foo >= 5 ) / 5 , 2, ',', '' )}]
+1032:[{str_number( !( $foo >= 5 ) / -$foo , 2, ',', '' )}]
 1033:[{debug_dump( !( $foo >= 5 ) % 5 )}]
 1034:[{debug_dump( !( $foo >= 5 ) % -$foo )}]
 1035:[{debug_dump( !( $foo >= 5 ) == 5 )}]
