- Added a check for the is_set function that only a variable can be given as   parameter.

--- a/tests/regression_tests/functions/correct/function_is_set.in
+++ b/tests/regression_tests/functions/correct/function_is_set.in
@@ -1,7 +1,23 @@
+{use $obj}
 {var $x = array() }
+
 
 {if is_set( $x["bla"] )}
 Yes
 {else}
 No
 {/if}
+
+{if is_set( $obj->prop )}
+Yes
+{else}
+No
+{/if}
+
+{if is_set( $obj->blaaaaa )}
+Yes
+{else}
+No
+{/if}
+
+{is_set( $obj )}
