--- a/tests/regression_tests/functions/correct/type_functions.in
+++ b/tests/regression_tests/functions/correct/type_functions.in
@@ -1,4 +1,4 @@
-{use $myTstStdObject}
+{use $user, $myTstStdObject}
 is_empty:
 {is_empty( "" )}
 
@@ -19,6 +19,10 @@ is_numeric:
 
 is_object:
 {!is_object( 2 )}
+
+is_class:
+{is_class( $user, "RaysClass" )}
+{is_class( $user, "RaysBeautifulClass" )}
 
 is_scalar:
 {is_scalar( 2 )}
