--- a/tests/regression_tests/functions/correct/web_functions.in
+++ b/tests/regression_tests/functions/correct/web_functions.in
@@ -2,5 +2,5 @@
 4. {url_decode( "some+string+%2F+for+%26+an+%25+URL" )}
 5. {url_parameters_build( array( "foo" => "bar", "baz" => "foo" ) )}
 6. {url_parameters_build( array( "foo", "bar", "baz" ), "ez_" )}
-7. {debug_dump(url_build(array ( "scheme" => "http", "host" => "ez.no", "user" => "user", "pass" => "pass", "path" => "/test/index.php", "query" => "index=1", "fragment" => "target" ) ) )}
+7. {debug_dump(url_build(array ( "scheme" => "http", "host" => "ez.no", "user" => "user", "pass" => "pass", "path" => "/test/index.php", "query" => "index=1", "fragment" => "target", "port" => "port" ) ) )}
 8. {var $a = url_parse( "http://user:pass@ez.no/test/index.php?index=1#target" )}{$a["scheme"]} {$a["host"]} {$a["user"]} {$a["pass"]} {$a["path"]} {$a["query"]} {$a["fragment"]}
