--- a/tests/regression_tests/expressions/correct/modifying_operators.in
+++ b/tests/regression_tests/expressions/correct/modifying_operators.in
@@ -1,57 +1,57 @@
 {var $foo = 42, $bar = 101, $bar2 = 201, $arr = array( 'foo' => 401 )}
-0001:[{$bar = 101}{$bar2 = 201}{$bar = 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0002:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 = 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0003:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 += 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0004:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 -= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0005:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 *= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0006:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 /= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0007:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 %= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0008:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 .= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0009:[{$bar = 101}{$bar2 = 201}{$bar += 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0010:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 = 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0011:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 += 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0012:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 -= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0013:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 *= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0014:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 /= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0015:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 %= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0016:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 .= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0017:[{$bar = 101}{$bar2 = 201}{$bar -= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0018:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 = 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0019:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 += 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0020:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 -= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0021:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 *= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0022:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 /= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0023:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 %= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0024:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 .= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0025:[{$bar = 101}{$bar2 = 201}{$bar *= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0026:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 = 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0027:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 += 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0028:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 -= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0029:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 *= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0030:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 /= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0031:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 %= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0032:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 .= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0033:[{$bar = 101}{$bar2 = 201}{$bar /= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0034:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 = 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0035:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 += 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0036:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 -= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0037:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 *= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0038:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 /= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0039:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 %= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0040:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 .= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0041:[{$bar = 101}{$bar2 = 201}{$bar %= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0042:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 = 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0043:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 += 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0044:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 -= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0045:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 *= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0046:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 /= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0047:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 %= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0048:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 .= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0049:[{$bar = 101}{$bar2 = 201}{$bar .= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0050:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 = 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0051:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 += 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0052:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 -= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0053:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 *= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0054:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 /= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0055:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 %= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
-0056:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 .= 5}{debug_dump( $bar )},{debug_dump( $bar2 )}]
+0001:[{$bar = 101}{$bar2 = 201}{$bar = 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0002:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 = 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0003:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 += 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0004:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 -= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0005:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 *= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0006:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 /= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0007:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 %= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0008:[{$bar = 101}{$bar2 = 201}{$bar = $bar2 .= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0009:[{$bar = 101}{$bar2 = 201}{$bar += 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0010:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 = 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0011:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 += 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0012:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 -= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0013:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 *= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0014:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 /= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0015:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 %= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0016:[{$bar = 101}{$bar2 = 201}{$bar += $bar2 .= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0017:[{$bar = 101}{$bar2 = 201}{$bar -= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0018:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 = 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0019:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 += 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0020:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 -= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0021:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 *= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0022:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 /= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0023:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 %= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0024:[{$bar = 101}{$bar2 = 201}{$bar -= $bar2 .= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0025:[{$bar = 101}{$bar2 = 201}{$bar *= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0026:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 = 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0027:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 += 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0028:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 -= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0029:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 *= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0030:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 /= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0031:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 %= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0032:[{$bar = 101}{$bar2 = 201}{$bar *= $bar2 .= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0033:[{$bar = 101}{$bar2 = 201}{$bar /= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0034:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 = 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0035:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 += 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0036:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 -= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0037:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 *= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0038:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 /= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0039:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 %= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0040:[{$bar = 101}{$bar2 = 201}{$bar /= $bar2 .= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0041:[{$bar = 101}{$bar2 = 201}{$bar %= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0042:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 = 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0043:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 += 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0044:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 -= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0045:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 *= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0046:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 /= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0047:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 %= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0048:[{$bar = 101}{$bar2 = 201}{$bar %= $bar2 .= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0049:[{$bar = 101}{$bar2 = 201}{$bar .= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0050:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 = 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0051:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 += 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0052:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 -= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0053:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 *= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0054:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 /= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0055:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 %= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
+0056:[{$bar = 101}{$bar2 = 201}{$bar .= $bar2 .= 5}{str_number( $bar, 5, ',', '' )},{str_number( $bar2, 5, ',', '' )}]
