--- a/tests/regression_tests/functions/correct/date_functions.in
+++ b/tests/regression_tests/functions/correct/date_functions.in
@@ -1,6 +1,10 @@
-{use $timestamp}
+{use $timestamp, $date}
 1. {date_format_timestamp( "Y-m-d", 1147362767 )}
 2. {date_format_timestamp( "Y-m-d H:m:i", 1147362767 )}
 {var $cur = date_current_timestamp()}
 3. {if $cur >= $timestamp} correct {/if}
    {if $timestamp <= date_current_timestamp()} correct {/if}
+
+4. {date_format( "Y-m-d H:i:s O T e", $date )}
+5. {date_format( "Y-m-d H:i:s O T e" )}
+6. {date_format( "Y-m-d H:i:s O T e", 1147362767 )}
