--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,13 @@
     },
     "description": "A fully functional Templating system, supporting template compilation in different levels, user defined functions and operators, an optimizer, output escaping for different output handlers to prevent XSS and other security problems and a plug in system for extra functionality (such as a Translation system).",
     "homepage": "https://github.com/zetacomponents",
-    "license": "apache2",
+    "license": "Apache-2.0",
     "name": "zetacomponents/template",
-    "type": "library"
+    "type": "library",
+        "require": {
+            "zetacomponents/base": "*"
+        },
+        "require-dev": {
+            "zetacomponents/unit-test": "*"
+        }
 }
