--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,10 @@
         "zetacomponents/base": "~1.8"
     },
     "require-dev": {
+        "phpunit/phpunit": "^7.0",
+        "zetacomponents/database": "*",
+        "zetacomponents/template-translation-tiein": "*",
+        "zetacomponents/translation": "*",
         "zetacomponents/unit-test": "*"
     }
 }
