--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     "require-dev": {
         "phpunit/phpunit": "^9.0",
         "zetacomponents/database": "*",
-        "zetacomponents/template-translation-tiein": "*",
+        "zetacomponents/template-translation-tiein": "^1.2",
         "zetacomponents/translation": "*",
         "zetacomponents/unit-test": "^1.2",
         "squizlabs/php_codesniffer": "3.*"
