--- a/composer.json
+++ b/composer.json
@@ -51,5 +51,10 @@
         "zetacomponents/translation": "*",
         "zetacomponents/unit-test": "^1.2",
         "squizlabs/php_codesniffer": "3.*"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        }
     }
 }
